discussion/kv_engine/133514/133514_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36956: Move CB3ExecutorThread to own files

Move the CB3ExecutorThread class from executorthread.{cc,h} to it's
own cb3_executorthread.{cc,h} files.

Change-Id: I7871ae8cafc1861a650a86a85315c718c39f11b6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-07-30 13:22:41.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-30 13:47:14.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25431/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/executorpool.h:169:17:
error: no type named "mutex" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25431/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3603/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/cb3_executorthread.h:55:9: warning: use "= default" to define a trivial default constructor [modernize-use-equals-default]
        AtomicProcessTime() {
        ^                   ~
                            = default;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:169:17: error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
    static std::mutex initGuard;
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3603/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/executorpool.h:169:17:
error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3603/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29379/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\cb3_executorpool.h(257): error C3646: "_adjustWorkers": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29379/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4942/ : FAILURE

Compile error at [2020-07-30T13:42:58.764Z] ../kv_engine/engines/ep/src/executorpool.h:169:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4942/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4858/ : FAILURE

Compile error at [2020-07-30T13:39:37.794Z] ../kv_engine/engines/ep/src/executorpool.h:169:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4858/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5042/ : FAILURE

Compile error at [2020-07-30T13:28:07.981Z] ../kv_engine/engines/ep/src/executorpool.h:169:17:
error: ?mutex? in namespace ?std? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5042/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12758/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2118/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3971/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
